[gd_scene load_steps=17 format=3 uid="uid://ify8n5m8sqwh"]

[ext_resource type="Script" path="res://scenes/controls/hirondelle.gd" id="1_lwrrq"]
[ext_resource type="Texture2D" uid="uid://c6mkw48hcb5hy" path="res://themes/kenney-game-icons/vector_whiteIcons.svg" id="2_qjebv"]
[ext_resource type="PackedScene" uid="uid://b2ohh7hvqfpk5" path="res://scenes/obs_view.tscn" id="3_pfph6"]
[ext_resource type="PackedScene" uid="uid://0kw6fnk07v5x" path="res://scenes/window/h_window.tscn" id="4_eihrd"]
[ext_resource type="PackedScene" uid="uid://8hoo3fke86k1" path="res://scenes/twitch/twitch_view.tscn" id="4_o648v"]
[ext_resource type="PackedScene" uid="uid://utm1df34dey4" path="res://scenes/discord/discord_view.tscn" id="5_x5kdt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dr2k0"]
atlas = ExtResource("2_qjebv")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eakjk"]
atlas = ExtResource("2_qjebv")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o36h"]
atlas = ExtResource("2_qjebv")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar7wv"]
atlas = ExtResource("2_qjebv")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_miyoq"]
atlas = ExtResource("2_qjebv")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnt1c"]
atlas = ExtResource("2_qjebv")
region = Rect2(960, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ldwo"]
atlas = ExtResource("2_qjebv")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb77y"]
atlas = ExtResource("2_qjebv")
region = Rect2(896, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4uuc"]
atlas = ExtResource("2_qjebv")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6sye"]
atlas = ExtResource("2_qjebv")
region = Rect2(512, 192, 64, 64)

[node name="Hirondelle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwrrq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 12

[node name="BtnMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = SubResource("AtlasTexture_dr2k0")

[node name="BtnSave" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"
icon = SubResource("AtlasTexture_eakjk")

[node name="BtnLoad" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"
icon = SubResource("AtlasTexture_0o36h")

[node name="BtnClear" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Clear"
icon = SubResource("AtlasTexture_ar7wv")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnAddNode" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonFlat"
text = "Add node"
icon = SubResource("AtlasTexture_miyoq")
flat = true

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnWindow" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Show window"
icon = SubResource("AtlasTexture_lnt1c")

[node name="Nodes" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="MenuPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/Nodes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Hirondelle"

[node name="BtnMenuNodes" type="Button" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Nodes"
icon = SubResource("AtlasTexture_0ldwo")

[node name="BtnMenuSettings" type="Button" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Settings"
icon = SubResource("AtlasTexture_mb77y")

[node name="GraphListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="LblGraphList" type="Label" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer/GraphListContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.294118)
text = "Graphs
"

[node name="GraphTree" type="Tree" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer/GraphListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer/GraphListContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer/GraphListContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnAddGraph" type="Button" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer/GraphListContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/icon_max_width = 12
icon = SubResource("AtlasTexture_j4uuc")

[node name="BtnRemoveGraph" type="Button" parent="MarginContainer/VBoxContainer/Nodes/MenuPanel/MarginContainer/VBoxContainer/GraphListContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/icon_max_width = 12
icon = SubResource("AtlasTexture_v6sye")

[node name="MenuTabs" type="TabContainer" parent="MarginContainer/VBoxContainer/Nodes"]
layout_mode = 2
tab_alignment = 1
current_tab = 1
tabs_visible = false

[node name="GraphContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tabs_visible = false
metadata/_tab_index = 0

[node name="Settings" type="MarginContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
metadata/_tab_index = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings"]
layout_mode = 2
current_tab = 2

[node name="OBS" type="PanelContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer/OBS"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="OBS" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer/OBS/MarginContainer" instance=ExtResource("3_pfph6")]
layout_mode = 2

[node name="Twitch" type="PanelContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer/Twitch"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Twitch" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer/Twitch/MarginContainer" instance=ExtResource("4_o648v")]
layout_mode = 2

[node name="Discord" type="PanelContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer/Discord"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/Nodes/MenuTabs/Settings/TabContainer/Discord/MarginContainer" instance=ExtResource("5_x5kdt")]
layout_mode = 2

[node name="HWindow" parent="." instance=ExtResource("4_eihrd")]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
